--- a/app/views/project_taskx/tasks/show.html.erb
+++ b/app/views/project_taskx/tasks/show.html.erb
@@ -67,10 +67,17 @@
   <% end %>
 </p>
 
-  <%= link_to t('Back'), SUBURI + "/authentify/view_handler?index=0", :id => 'close', :class => BUTTONS_CLS['action'] %>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		<%= link_to t('New Log'), SUBURI + commonx.new_log_path(:resource_id => @task.id, :resource_name => params[:controller], :subaction => 'project_task', :format => :js), :remote => true, 
-                          :id => 'new_log_link', :class => BUTTONS_CLS['action'] if has_action_right?('create_project_task', 'commonx/logs') %>    	
+	<table class="table table-striped">
+	  <tr>
+	    <th>
+  			<%= link_to t('Back'), SUBURI + "/authentify/view_handler?index=0", :id => 'close', :class => BUTTONS_CLS['action'] %>
+  			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<%= link_to t('New Log'), SUBURI + commonx.new_log_path(:resource_id => @task.id, :resource_name => params[:controller], :subaction => 'project_task', :format => :js), :remote => true, 
+                          :id => 'new_log_link', :class => BUTTONS_CLS['action'] if has_action_right?('create_project_task', 'commonx/logs') %>  
+        </th>
+	  </tr>
+	</table>
+		
 </div>
 
 <% end %>
